paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/PAID_Customer_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PAID Customer Field Mapping</label>
    <pluralLabel>PAID Customer Field Mappings</pluralLabel>
</CustomObject>