paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this field is required for PAID API</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>