paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about this mapping</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>