paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/fields/PAID_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PAID_Field_Name__c</fullName>
    <description>PAID API field name (e.g., name, billingcity)</description>
    <label>PAID Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>