paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <description>Parent field for nested objects (e.g., billingAddress for address fields)</description>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>