paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/fields/Salesforce_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API_Name__c</fullName>
    <description>Salesforce field API name (e.g., Name, BillingStreet)</description>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>