paid/force-app/main/default/objects/PAID_Customer_Field_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>Salesforce object name (e.g., Account)</description>
    <label>Salesforce Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>